// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberCell component NumberCell handles changes 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <input
              autocomplete="off"
              class="default"
              inputmode="numeric"
              name="data"
              type="text"
              value="12.34"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`NumberCell component NumberCell handles changes 2`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <input
              autocomplete="off"
              class="default"
              inputmode="numeric"
              name="data"
              type="text"
              value=""
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`NumberCell component NumberCell renders 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <span
              autocomplete="off"
              class="default readOnly table--cell-value--number-readonly"
              id="data"
              name="data"
            >
              12.34
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`NumberCell component NumberCell renders cell editing with no row input 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="ellipsis"
        >
          <div
            class="fieldGroup"
          >
            <input
              autocomplete="off"
              class="default"
              inputmode="numeric"
              name="data"
              type="text"
              value=""
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`NumberCell component NumberCell renders hidden 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
          style="display: none;"
        >
          <div
            class="fieldGroup"
          >
            <span
              autocomplete="off"
              class="default readOnly table--cell-value--number-readonly"
              id="data"
              name="data"
            >
              12.34
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`NumberCell component NumberCell renders row editing with no row input 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <input
              autocomplete="off"
              class="default"
              inputmode="numeric"
              name="data"
              type="text"
              value=""
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`NumberCell component NumberCell renders with forced value 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <span
              autocomplete="off"
              class="default readOnly table--cell-value--negative table--cell-value--number-readonly"
              id="data"
              name="data"
            >
              -43.21
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
